[package]
name = "network-logger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

# NOTE: don't to start client with the sudo command:
# sudo cargo run --bin grpc-client
[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.81"
bytes = "1.6.0"
chrono = "0.4.37"
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
mongodb = "2.8.2"
prost = "0.12.3"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"

[dependencies.pnet]
version = "0.34.0"

[build-dependencies]
tonic-build = "0.11.0"
