[package]
name = "commit-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full"] }


[dependencies.pnet]
version = "0.34.0"
